# SlicerExtension-VMTK

./: CMakeLists.txt  CTestConfig.cmake  README  README.md  SuperBuild.cmake  qSlicerVmtk4Module.h
ArterialCalcificationPreProcessor/: ArterialCalcificationPreProcessor.py  CMakeLists.txt
ArterialCalcificationPreProcessor/Resources/UI/: ArterialCalcificationPreProcessor.ui
BifurcationProfiles/: BifurcationProfiles.py  CMakeLists.txt
BifurcationProfiles/Resources/UI/: BifurcationProfiles.ui
BranchClipper/: CMakeLists.txt  README.md  qSlicerBranchClipperModule.cxx  qSlicerBranchClipperModule.h  qSlicerBranchClipperModuleWidget.cxx  qSlicerBranchClipperModuleWidget.h
BranchClipper/Logic/: CMakeLists.txt  vtkSlicerBranchClipperLogic.cxx  vtkSlicerBranchClipperLogic.h
BranchClipper/Resources/: qSlicerBranchClipperModule.qrc
BranchClipper/Resources/UI/: qSlicerBranchClipperFooBarWidget.ui  qSlicerBranchClipperModuleWidget.ui  qSlicerBranchClipperWidget.ui
BranchClipper/Widgets/: qSlicerBranchClipperFooBarWidget.cxx  qSlicerBranchClipperFooBarWidget.h  qSlicerBranchClipperWidget.cxx  qSlicerBranchClipperWidget.h
CenterLineMetrics/: CMakeLists.txt  CenterLineMetrics.py
CenterLineMetrics/Resources/UI/: CenterLineMetrics.ui
CenterlineComputation/: CMakeLists.txt  CenterlineComputation.py
CenterlineDisassembly/: CMakeLists.txt  CenterlineDisassembly.py
CenterlineDisassembly/Resources/UI/: CenterlineDisassembly.ui
CenterlineMetrics/: CMakeLists.txt  CenterlineMetrics.py
CenterlineMetrics/Resources/UI/: CenterlineMetrics.ui
ClipVessel/: CMakeLists.txt  ClipVessel.py
ClipVessel/Resources/UI/: ClipVessel.ui
CrossSectionAnalysis/: CMakeLists.txt  CrossSectionAnalysis.py  README.md
CrossSectionAnalysis/Logic/: CMakeLists.txt  CrossSectionCompute.cxx  CrossSectionCompute.h  vtkCrossSectionCompute.cxx  vtkCrossSectionCompute.h
CrossSectionAnalysis/Resources/UI/: CrossSectionAnalysis.ui
CrossSectionAnalysis/cpp/: CMakeLists.txt  CrossSectionCompute.cxx  CrossSectionCompute.h
CurveCenterlineExtraction/: CMakeLists.txt  CurveCenterlineExtraction.py  README.md
CurveCenterlineExtraction/Resources/UI/: CurveCenterlineExtraction.ui
Docs/: ArterialCalcificationPreProcessor.md  BifurcationProfiles.md  BranchClipper.md  CenterlineComputation.md  CenterlineDisassembly.md  ClipVessel.md  CrossSectionAnalysis.md  CurveCenterlineExtraction.md  EditCenterline.md  ExtractCenterline.md  FiducialCenterlineExtraction.md  GuidedArterySegmentation.md  GuidedVeinSegmentation.md  PreFitTube.md  QuickArterySegmentation.md  StenosisMeasurement1D.md  StenosisMeasurement2D.md  StenosisMeasurement3D.md
EditCenterline/: CMakeLists.txt  EditCenterline.py
EditCenterline/Resources/UI/: EditCenterline.ui
ExtractCenterline/: CMakeLists.txt  ExtractCenterline.py
ExtractCenterline/Resources/UI/: ExtractCenterline.ui
FiducialCenterlineExtraction/: CMakeLists.txt  FiducialCenterlineExtraction.py  README.md
FiducialCenterlineExtraction/Resources/UI/: FiducialCenterlineExtraction.ui
GuidedArterySegmentation/: CMakeLists.txt  GuidedArterySegmentation.py
GuidedArterySegmentation/Resources/UI/: GuidedArterySegmentation.ui
GuidedVeinSegmentation/: CMakeLists.txt  GuidedVeinSegmentation.py
GuidedVeinSegmentation/Resources/UI/: GuidedVeinSegmentation.ui
LevelSetSegmentation/: CMakeLists.txt  LevelSetSegmentation.py
LibraryModule/: CMakeLists.txt  qSlicerVmtk4Module.cxx  qSlicerVmtk4Module.h  qSlicerVmtkModule.cxx  qSlicerVmtkModule.h
LibraryModule/Testing/Cxx/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/SlicerVmtk4CommonLib/: CenterlineComputationLogic.py  Helper.py  LevelSetSegmentationLogic.py  VesselnessFilteringLogic.py
PreFitTube/: CMakeLists.txt  PreFitTube.py
PreFitTube/Resources/UI/: PreFitTube.ui
PythonModules/: CMakeLists.txt  CenterlineComputation.py  LevelSetSegmentation.py  VesselnessFiltering.py
PythonModules/SlicerVmtkCommonLib/: CMakeLists.txt  CenterlineComputationLogic.py  Helper.py  LevelSetSegmentationLogic.py  VesselnessFilteringLogic.py
QuickArterySegmentation/: CMakeLists.txt  QuickArterySegmentation.py
QuickArterySegmentation/Resources/UI/: QuickArterySegmentation.ui
SlicerVmtk4/: CMakeLists.txt  SuperBuild.cmake  qSlicerVmtk4Module.cxx  qSlicerVmtk4Module.h
SlicerVmtk4/Modules/: CMakeLists.txt  CenterlineComputation.py  LevelSetSegmentation.py  VesselnessFiltering.py
SlicerVmtk4/Modules/SlicerVmtk4CommonLib/: CMakeLists.txt  CenterlineComputationLogic.py  LevelSetSegmentationLogic.py  VesselnessFilteringLogic.py
SlicerVmtk4/SuperBuild/: VMTK.cmake
SlicerVmtk4Modules/: CMakeLists.txt  LevelSetSegmentation.py  VesselnessFiltering.py
SlicerVmtk4Modules/SlicerVmtk4CommonLib/: CMakeLists.txt  CenterlineComputationLogic.py  Helper.py  LevelSetSegmentationLogic.py  __init__.py
StenosisMeasurement1D/: CMakeLists.txt  StenosisMeasurement1D.py
StenosisMeasurement1D/Resources/UI/: StenosisMeasurement1D.ui
StenosisMeasurement2D/: CMakeLists.txt  StenosisMeasurement2D.py
StenosisMeasurement2D/Resources/UI/: StenosisMeasurement2D.ui
StenosisMeasurement3D/: CMakeLists.txt  qSlicerStenosisMeasurement3DModule.cxx  qSlicerStenosisMeasurement3DModule.h  qSlicerStenosisMeasurement3DModuleWidget.cxx  qSlicerStenosisMeasurement3DModuleWidget.h
StenosisMeasurement3D/Logic/: CMakeLists.txt  vtkSlicerStenosisMeasurement3DLogic.cxx  vtkSlicerStenosisMeasurement3DLogic.h
StenosisMeasurement3D/MRML/: CMakeLists.txt  vtkMRMLStenosisMeasurement3DLesionModelDisplayNode.cxx  vtkMRMLStenosisMeasurement3DLesionModelDisplayNode.h  vtkMRMLStenosisMeasurement3DParameterNode.cxx  vtkMRMLStenosisMeasurement3DParameterNode.h
StenosisMeasurement3D/Resources/: qSlicerStenosisMeasurement3DModule.qrc
StenosisMeasurement3D/Widgets/: CMakeLists.txt  qSlicerStenosisMeasurement3DWidget.cxx  qSlicerStenosisMeasurement3DWidget.h
SuperBuild/: External_VMTK.cmake  VMTK.cmake
VesselnessFiltering/: CMakeLists.txt  VesselnessFiltering.py
VesselnessFiltering/Resources/: VesselnessVrPresets.mrml
(+2 files in other folders)
